testdata/golden/sema/invalid/attrs_packed_align_conflict/only.sg
// Test: @packed and @align conflict

// This should fail with SEM3061
@packed
@align(8)
type ConflictType = {
    x: int,
    y: int
}
